# solrand-old

./: Anchor.toml  package-lock.json  package.json
app/src/: idl.json  mm.ts  solpat.ts  solrand.js
programs/solpat/: Cargo.toml
programs/solpat/src/: lib.rs
programs/solrand/: Cargo.toml
programs/solrand/src/: lib.rs
tests/: init.js  init.ts  solpat.ts
