[package]
name = "solpat"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solpat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
# features = ["no-entrypoint"]
chainlink = { git = "https://github.com/kilb/chainlink-solana", rev = "ba4c57d", package = "flux-aggregator", features = ["no-entrypoint"]}
